unpackaged/main/default/objects/litify_pm__Treatment__c/litify_pm__Treatment__c.object-meta.xml
<CustomObject>
    <label>Treatment</label>
    <nameField>
        <displayFormat>TRT-{0000}</displayFormat>
        <label>Treatment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>