unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Body_Part__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Body_Part__c</fullName>
    <formula>TEXT(litify_pm__Injury__r.litify_pm__Body_Part__c)</formula>
    <label>Body Part</label>
    <type>Text</type>
</CustomField>