unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Doctor_Facility__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Doctor_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor/Facility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>