unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Impairment_Rating__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Impairment_Rating__c</fullName>
    <label>Impairment Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>