unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Impairment_Rating_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Impairment_Rating_Date__c</fullName>
    <label>Impairment Rating Date</label>
    <type>Date</type>
</CustomField>