unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Injury__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Injury__c</fullName>
    <label>Injury</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (4 AND 5 AND 6) OR (7 AND 8)</booleanFilter>
        <errorMessage>The “Intake” or &quot;Matter&quot; field on Treatment must match the corresponding fields on the related Injury, or else must be blank.</errorMessage>
        <filterItems>
            <field>$Source.litify_pm__lit_Matter__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Injury__c.litify_pm__Matter__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__lit_Matter__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>litify_pm__Injury__c.litify_pm__Matter__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__lit_Intake__c</field>
            <operation>equals</operation>
            <valueField>litify_pm__Injury__c.litify_pm__Intake__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.litify_pm__lit_Intake__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>litify_pm__Injury__c.litify_pm__Intake__c</field>
            <operation>notEqual</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>litify_pm__Injury__c.litify_pm__Matter__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <filterItems>
            <field>litify_pm__Injury__c.litify_pm__Intake__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>litify_pm__Injury__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>