unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__lit_Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>