unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__lit_Matter__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>