unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__lit_Treatment_And_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Treatment_And_Status__c</fullName>
    <formula>TEXT(litify_pm__Treatment__c) &amp; &quot; - &quot; &amp; TEXT(litify_pm__Treatment_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Treatment &amp; Status</label>
    <type>Text</type>
</CustomField>