unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Treatment__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Treatment__c</fullName>
    <label>Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ablation</fullName>
            </value>
            <value>
                <fullName>ACDF</fullName>
            </value>
            <value>
                <fullName>Arthroscopic Surgery</fullName>
            </value>
            <value>
                <fullName>Botox Injections</fullName>
            </value>
            <value>
                <fullName>Carpal Tunnel Release</fullName>
            </value>
            <value>
                <fullName>Cast-hard</fullName>
            </value>
            <value>
                <fullName>Cast-soft</fullName>
            </value>
            <value>
                <fullName>Chiropractic Treatment</fullName>
            </value>
            <value>
                <fullName>Closed Reduction</fullName>
            </value>
            <value>
                <fullName>Cognitive Therapy</fullName>
            </value>
            <value>
                <fullName>Cortisone Injections</fullName>
            </value>
            <value>
                <fullName>CT Scan</fullName>
            </value>
            <value>
                <fullName>Decompression</fullName>
            </value>
            <value>
                <fullName>Decompression with Fusion</fullName>
            </value>
            <value>
                <fullName>Discectomy</fullName>
            </value>
            <value>
                <fullName>Discectomy with Fusion</fullName>
            </value>
            <value>
                <fullName>Disc Replacement</fullName>
            </value>
            <value>
                <fullName>EMC</fullName>
            </value>
            <value>
                <fullName>Epidural Steroid(s)</fullName>
            </value>
            <value>
                <fullName>Family Physician</fullName>
            </value>
            <value>
                <fullName>Fusion</fullName>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Injections</fullName>
            </value>
            <value>
                <fullName>Manipulation Under Anesthesia</fullName>
            </value>
            <value>
                <fullName>Medical Branch/Fecet Injections</fullName>
            </value>
            <value>
                <fullName>Medically Induced Coma</fullName>
            </value>
            <value>
                <fullName>Microdiscetomy</fullName>
            </value>
            <value>
                <fullName>MRI</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Neurotomy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>