unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Treatment_Completed__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Treatment_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treatment Completed</label>
    <type>Checkbox</type>
</CustomField>