unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Treatment_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Treatment_Date__c</fullName>
    <label>Treatment Date</label>
    <type>Date</type>
</CustomField>