unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Treatment_Notes__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Treatment_Notes__c</fullName>
    <label>Treatment Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>