unpackaged/main/default/objects/litify_pm__Treatment__c/fields/litify_pm__Treatment_Status__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Treatment_Status__c</fullName>
    <label>Treatment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recommended</fullName>
            </value>
            <value>
                <fullName>Completed - Prior SignUp</fullName>
            </value>
            <value>
                <fullName>Completed - After SignUp</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>